syntax = "proto3";

package POGOProtos.Data.Player;

message ContactSettings {
	bool send_marketing_emails = 1;
	bool send_push_notifications = 2;
}

