syntax = "proto3";

package POGOProtos.Enums;

enum TeamColor {
	NEUTRAL = 0;
	BLUE = 1;
	RED = 2;
	YELLOW = 3;
}

