syntax = "proto3";

package POGOProtos.Networking.Responses;

import "POGOProtos/Data/PlayerBadge.proto";

message GetPlayerProfileResponse {
	POGOProtos.Networking.Responses.GetPlayerProfileResponse.Result result = 1;
	int64 start_time = 2;
	repeated POGOProtos.Data.PlayerBadge badges = 3;
	enum Result {
		UNSET = 0;
		SUCCESS = 1;
	}
}

