syntax = "proto3";

package POGOProtos.Networking.Responses;

import "POGOProtos/Data/PlayerData.proto";

message GetPlayerResponse {
	bool success = 1;
	POGOProtos.Data.PlayerData player_data = 2;
}

