syntax = "proto3";

package POGOProtos.Networking.Responses;

import "POGOProtos/Data/PlayerData.proto";

message SetContactSettingsResponse {
	POGOProtos.Networking.Responses.SetContactSettingsResponse.Status status = 1;
	POGOProtos.Data.PlayerData player_data = 2;
	enum Status {
		UNSET = 0;
		SUCCESS = 1;
		FAILURE = 2;
	}
}

